# AdvancedComputerSystems

./: README.md
project1/: CMakeLists.txt  README.md  common.h  main.cpp  run.sh
project2/: CMakeLists.txt  README.md  main.cpp
project3/: README.md
project4/: .gitignore  README.md  a.out  main.cpp  run.sh
